// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose correct accessibility tree with label 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "name": "Some label",
          "role": "StaticText",
        },
      ],
      "role": "none",
    },
    Object {
      "children": Array [
        Object {
          "name": "Some Tag",
          "role": "StaticText",
        },
      ],
      "role": "none",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "role": "none",
                },
              ],
              "role": "none",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "Some label Some Tag",
  "role": "button",
}
`;

exports[`accessibility should expose correct initial accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "name": "Some Tag",
          "role": "StaticText",
        },
      ],
      "role": "none",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "role": "none",
                },
              ],
              "role": "none",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "Some Tag",
  "role": "button",
}
`;
